--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "immutable": "^3.8.1",
+    "@shoutem/ui": "^0.21.3",
     "expo": "^19.0.0",
+    "immutable": "^3.8.1",
+    "npm": "^4.6.1",
     "react": "16.0.0-alpha.12",
-		"react-native": "^0.46.1"
+    "react-native": "^0.46.1"
   }
 }
