--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "immutable": "^3.8.1",
     "npm": "^4.6.1",
     "react": "16.0.0-alpha.12",
-    "react-native": "^0.46.1"
+    "react-native": "^0.46.1",
+    "react-native-fontawesome": "^5.7.0"
   }
 }
