--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-native-scripts": "1.1.0",
-    "react-native-mock": "0.3.1",
+    "react-native-scripts": "*",
+    "react-native-mock": "*",
     "jest-expo": "~20.0.0",
     "chai": "^3.5.0",
     "chai-as-promised": "*",
@@ -29,8 +29,9 @@
     "expo": "^19.0.0",
     "immutable": "^3.8.1",
     "npm": "^4.6.1",
-    "react": "16.0.0-alpha.12",
+    "react": "^16.0.0-alpha.12",
     "react-native": "^0.46.1",
-    "react-native-fontawesome": "^5.7.0"
+    "react-native-fontawesome": "^5.7.0",
+    "redux-thunk": "^2.2.0"
   }
 }
