Game Type view logic

--- a/app.json
+++ b/app.json
@@ -1,5 +1,15 @@
 {
-  "expo": {
-    "sdkVersion": "19.0.0"
-  }
+	"expo": {
+	 "name": "Snooker",
+	 "icon": "",
+	 "version": "1.0.0",
+	 "slug": "Billiard for 4 persons!",
+	 "sdkVersion": "17.0.0",
+	 "ios": {
+		 "bundleIdentifier": "io.devyard.snooker"
+	 },
+	 "android": {
+		 "package": "io.devyars.snooker"
+	 }
+	}
 }
